trying to fix timestamp and edit functionalities, so these parts are still under work and are not showing up properly on screen

--- a/src/component/list-container/list.css
+++ b/src/component/list-container/list.css
@@ -2,7 +2,6 @@
   margin: 1% 0 0 5%;
   padding: 0.5%;
   border-radius: 20%;
-  background-color: #b7f1f1;
 }
 
 .dateTime {
